@@ -291,11 +291,9 @@ If you do not need the nonce, then you might consider using L<Mojolicious::Plugi
 
 =head1 SUPPORT FOR OLDER PERL VERSIONS
 
-Since v0.2.0, the this module requires Perl v5.14 or later.
+This module requires Perl v5.14 or later.
 
-If you need this module on Perl v5.10, please use one of the v0.1.x
-versions of this module.  Significant bug or security fixes may be
-backported to those versions.
+Future releases may only support Perl versions released in the last ten (10) years.
 
 =head1 SEE ALSO
 
