@@ -8,6 +8,8 @@ Revision history for {{ $dist->name }}
   - The nonce_seed_size attribute was removed.
 
   [Documentation]
+  - Documented the support for older Perl versions.
+
   - Updated copyright year.
 
 v0.3.4    2023-11-07 13:09:44+00:00 Europe/London
